# test-pyaramid-analyzer

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/test_pyramid_analyzer/: __init__.py  anti_patterns.py  ci_parser.py  classifier.py  cli.py  confidence.py  debug_printer.py  models.py  parser.py  pr_commenter.py  report_generator.py  rules_loader.py  scanner.py  scorer.py
src/test_pyramid_analyzer/config/: default_rules.yaml
src/test_pyramid_analyzer/plugins/: __init__.py  base.py  cpp_plugin.py  csharp_plugin.py  go_plugin.py  groovy_plugin.py  java_plugin.py  javascript_plugin.py  kotlin_plugin.py  php_plugin.py  python_plugin.py  ruby_plugin.py  rust_plugin.py  scala_plugin.py
src/test_pyramid_analyzer/templates/: report.html.j2
tests/: test_anti_patterns.py  test_ci_parser.py  test_classifier.py  test_confidence.py  test_scanner.py  test_scorer.py
tests/fixtures/sample_repo/.github/workflows/: ci.yml
tests/fixtures/sample_repo/tests/e2e/: test_login_flow.py
tests/fixtures/sample_repo/tests/integration/: test_db_connection.py
tests/fixtures/sample_repo/tests/unit/: test_calculator.py
